<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Basic Udemy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hola_mundo">Hola Mundo!!</string>
    <string name="boton">Enviar</string>
    <string name="usuario">Usuario</string>
    <string name="m">Masculino</string>
    <string name="f">Femenino</string>


</resources>
